Time: 1 ms (100.00%), Space: 43.9 MB (68.42%) - LeetHub